# gli

./: CMakeLists.txt  LICENSE
glad/: .gitignore  CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/gli/: gli.h  unique_handle.h
src/: gli.cpp
